objects/DMAPP__DM_Genius_Qualifier__c.object
<CustomObject>
    <description>Holds Genius template qualifier text</description>
    <fields>
        <fullName>DMAPP__DMGQualifierID__c</fullName>
        <externalId>true</externalId>
        <label>DMGQualifierID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Question__c</fullName>
        <label>Qualifier Longname</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Tip__c</fullName>
        <label>Tip</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Genius Qualifier</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualifier Shortname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genius Qualifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>